Whoops, used a Java11 method in our Java8 Project
Small bug fix, used isBlank() instead of .trim().isEmpty().